# caseRep

./: index.html  package-lock.json  package.json  style.css  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database_init.rs  lib.rs  main.rs
src/forms/: addCase.tsx  changeMediator.tsx  generateSpecificReport.tsx  updateCaseStatus.tsx
src/landing/: landing.tsx
src/lib/: assignedContext.tsx  logs.tsx
src/types/: case.tsx
