[package]
name = "caserep"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"

rusqlite = { version = "0.36.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
convert_case = "0.4"

webkit2gtk-sys = { version = "0.18", features = ["v2_40"] }





